tests/errors/alias_call_wrong_arg_type.ptt
// Codex audit P0-1: module-qualified calls must check argument
// types. math.max(int, int) — passing a String must fail at
// compile time.

use std/string
use std/math

spark {
  yell(math.max("hello", 2))
}
